2021/sep/wasm/demo-server-filter-network-wasm.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: golang-filter
  namespace: jeevan-namespace
spec:
  workloadSelector:
    labels:
      app: demo-server
  configPatches:
    # The first patch adds the lua filter to the listener/http connection manager
  - applyTo: NETWORK_FILTER
    match:
#      context: SIDECAR_INBOUND
      listener:
    patch:
      operation: INSERT_BEFORE
      value: 
        name: netscout-golang-filter-patch
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.network.wasm.v3.Wasm
          value:
            config:
              vm_config:
                code:
                  local:
                    filename: /var/local/wasm/network-filter.wasm
                runtime: envoy.wasm.runtime.v8
  - applyTo: CLUSTER
    match:
      context: SIDECAR_OUTBOUND
    patch:
      operation: ADD
      value: # cluster specification
        name: "demo_client_cluster"
        type: STRICT_DNS
        connect_timeout: 0.5s
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: demo-client
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    protocol: TCP
                    address: "demo-client-service"
                    port_value: 80
